tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors3(strict=true).errors.txt
fatarrowfunctionsOptionalArgsErrors3.ts(1,2): error TS7019: Rest parameter '(Missing)' implicitly has an 'any[]' type.
fatarrowfunctionsOptionalArgsErrors3.ts(1,5): error TS1003: Identifier expected.


==== fatarrowfunctionsOptionalArgsErrors3.ts (2 errors) ====
    (...) => 105;
     ~~~
!!! error TS7019: Rest parameter '(Missing)' implicitly has an 'any[]' type.
        ~
!!! error TS1003: Identifier expected.
    